# Abstract_Interpreter

./: CMakeLists.txt  README.md
include/: abstract_interpreter.hpp  abstract_interpreter_old.hpp  ast.hpp  equational_interpreter.hpp  interval.hpp  interval_store.hpp
src/: main.cpp  main_test_eq.cpp
tests/: easy3_1.c  easy3_2_div.c  ifelse2_1.c  ifelse3_1.c
